[fix] remove z-index on :hover

--- a/css/style.css
+++ b/css/style.css
@@ -42,5 +42,4 @@ h1 {
   transition: 0.5s;
   cursor: pointer;
   box-shadow: 0 30px 50px 0 rgba(0, 0, 0, 0.8);
-  z-index: 1;
 }
